<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.overlord.rtgov.ui</groupId>
  <artifactId>overlord-rtgov-ui</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <packaging>pom</packaging>
  <name>Overlord RTGov UI</name>
  <description>Parent project for the Overlord RTGov user interface.</description>
  <url>http://www.jboss.org/overlord</url>
  <inceptionYear>2013</inceptionYear>

  <parent>
    <groupId>org.jboss.integration-platform</groupId>
    <artifactId>jboss-integration-platform-parent</artifactId>
    <version>6.0.0.CR3</version>
  </parent>

  <organization>
    <name>JBoss, a division of Red Hat</name>
    <url>http://www.jboss.org</url>
  </organization>

  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <!-- Global Settings -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>

    <!-- Distribution URLs -->
    <jboss.releases.repo.url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</jboss.releases.repo.url>
    <jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>

    <!-- Maven plugin versions -->
    <maven.surefire.report.plugin.version>2.4.3</maven.surefire.report.plugin.version>
    <maven.surefire.plugin.version>2.7.1</maven.surefire.plugin.version>
    <maven.assembly.plugin.version>2.2</maven.assembly.plugin.version>
    <maven.install.plugin.version>2.3.1</maven.install.plugin.version>
    <maven.javadoc.plugin.version>2.7</maven.javadoc.plugin.version>
    <maven.jxr.plugin.version>2.1</maven.jxr.plugin.version>
    <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
    <maven.war.plugin.version>2.1.1</maven.war.plugin.version>
    <maven.bundle.plugin.version>2.1.0</maven.bundle.plugin.version>
    <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
    <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
    <maven.deploy.plugin.version>2.5</maven.deploy.plugin.version>
    <maven.clean.plugin.version>2.4.1</maven.clean.plugin.version>

    <rtgov.version>2.0.0-SNAPSHOT</rtgov.version>
    <s-ramp-ui.version>0.4.0-SNAPSHOT</s-ramp-ui.version>

    <!-- Third party libraries -->
    <overlord-commons.version>2.0.1-SNAPSHOT</overlord-commons.version>
    <commons.io.version>2.4</commons.io.version>
    <commons.lang3.version>3.1</commons.lang3.version>
    <commons.config.version>1.8</commons.config.version>
    <commons.fileupload.version>1.2.2</commons.fileupload.version>
    <org.jboss.resteasy.version>2.3.6.Final</org.jboss.resteasy.version>
    <errai.version>2.4.3.Final</errai.version>
    <gwt.version>2.5.1</gwt.version>
    <weld.version>1.1.6.Final</weld.version>
    <mvel.version>2.1.Beta8</mvel.version>
    <jetty.version>6.1.25</jetty.version>
    <uel.impl.version>2.1.2-b04</uel.impl.version>
    <servlet-api.version>3.0.1</servlet-api.version>
    <javaee-api.version>6.0</javaee-api.version>
    <jsp-api.version>2.0</jsp-api.version>
    <jbossas.version>7.2.0.Final</jbossas.version>
    <jboss-ejb3-api.version>3.1.0</jboss-ejb3-api.version>
    <cdi-api.version>1.0-SP4</cdi-api.version>
    <jboss-logging.version>3.0.0.Beta4</jboss-logging.version>
    <log4j.version>1.2.16</log4j.version>
    <slf4j.version>1.6.1</slf4j.version>
    <slf4j.api.version>1.5.11</slf4j.api.version>
    <slf4j.log4j.version>1.5.11</slf4j.log4j.version>
    <switchyard.version>1.1.0.Final</switchyard.version>
    <junit.version>4.10</junit.version>
    <jboss.msc.version>1.0.4.GA</jboss.msc.version>
    <jboss.as.server.version>7.2.0.Final</jboss.as.server.version>

    <version.org.jboss.msc.jboss-msc>1.0.4.GA</version.org.jboss.msc.jboss-msc>

  </properties>

  <modules>
	<module>rtgov-ui-core</module>
	<module>rtgov-ui-services-switchyard</module>
	<module>rtgov-ui-situations</module>
	<module>situation-store-jpa</module>
	<module>overlord-rtgov-ui-war</module>
	<module>overlord-rtgov-ui-dev-server</module>
	<module>overlord-rtgov-ui-war-eap61</module>
	<module>tests</module>
  </modules>

  <scm>
    <connection>scm:git:git://github.com/Governance/rtgov-ui.git</connection>
    <developerConnection>scm:git:git@github.com:Governance/rtgov-ui.git</developerConnection>
    <url>http://github.com/Governance/rtgov-ui</url>
  </scm>

  <issueManagement>
    <system>jira</system>
    <url>https://issues.jboss.org/browse/RTGOV</url>
  </issueManagement>

  <developers>
    <developer>
      <name>Eric Wittmann</name>
      <id>ewittman</id>
      <email>eric.wittmann@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <name>Gary Brown</name>
      <id>gbrown</id>
      <email>gbrown@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <dependencyManagement>
    <dependencies>

      <!-- Imported dependencies -->
      <dependency>
        <groupId>org.jboss.integration-platform</groupId>
        <artifactId>jboss-integration-platform-bom</artifactId>
        <version>6.0.0.CR3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.jboss.msc</groupId>
        <artifactId>jboss-msc</artifactId>
        <version>${version.org.jboss.msc.jboss-msc}</version>
      </dependency>

<!--
      <dependency>
        <groupId>javax</groupId>
        <artifactId>javaee-api</artifactId>
        <version>${javaee-api.version}</version>
      </dependency>
-->
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>${maven.war.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven.assembly.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>${maven.bundle.plugin.version}</version>
          <extensions>true</extensions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven.clean.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>gwt-maven-plugin</artifactId>
                    <versionRange>[2.3.0,)</versionRange>
                    <goals>
                      <goal>resources</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <execute />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!-- Specify the compiler options and settings -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <showDeprecation>false</showDeprecation>
          <showWarnings>false</showWarnings>
        </configuration>
      </plugin>
      <!-- Produce source jars during the 'verify' phase -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*TestCase.java</include>
            <include>**/*Test.java</include>
          </includes>
          <systemProperties>
            <property>
              <name>java.io.tmpdir</name>
              <value>${basedir}/target</value>
            </property>
          </systemProperties>
          <argLine>-Xmx256M -XX:MaxPermSize=512m</argLine>
        </configuration>
      </plugin>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-checkstyle-plugin</artifactId>
		<configuration>
			<configLocation>checkstyle/checkstyle.xml</configLocation>
			<consoleOutput>false</consoleOutput>
			<suppressionsLocation>checkstyle/suppressions.xml</suppressionsLocation>
			<failsOnError>false</failsOnError>
			<useFile />
		</configuration>
		<dependencies>
			<dependency>
				<groupId>org.overlord</groupId>
				<artifactId>overlord-commons-build</artifactId>
				<version>${overlord-commons.version}</version>
			</dependency>
		</dependencies>
		<executions>
			<execution>
				<id>check-style</id>
				<phase>site</phase>
				<goals>
					<goal>checkstyle</goal>
				</goals>
			</execution>
		</executions>
	  </plugin>      
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${maven.surefire.report.plugin.version}</version>
      </plugin>
    </plugins>
  </reporting>

  <repositories>
    <repository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/developer/</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/developer/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>always</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <distributionManagement>
    <repository>
      <id>jboss-releases-repository</id>
      <name>JBoss Releases Repository</name>
      <url>${jboss.releases.repo.url}</url>
    </repository>
    <snapshotRepository>
      <id>jboss-snapshots-repository</id>
      <name>JBoss Snapshots Repository</name>
      <url>${jboss.snapshots.repo.url}</url>
    </snapshotRepository>
  </distributionManagement>

  <profiles>
    <!-- temporary until product changes are back in community -->
    <profile>
      <id>product</id>
      <properties>
        <rtgov.version>1.0.1.Final</rtgov.version>
      </properties>
    </profile>
  </profiles>
</project>
